[metadata]
name = smartpy-installer
home_page = https://smartpy.io/
author = Aleksandr Artemenkov
author_email = alartum@gmail.com
project_urls =
    Source Code = https://smartpy.io/
summary = Installer for the SmartPy library

license = Apache-2
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

python_requires = >=3.7

[files]
packages = smartpy

[flake8]
# Allow unused imports in __init__.py
per-file-ignores = __init__.py:F401
